--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+        <!--Import Google Icon Font-->
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Chads Book Den</title>
     </head>
     <body>
-        @RenderBody()
+        <div class="container">
+            <nav>
+                <div class="nav-wrapper blue">
+                    <a href="/" class="brand-logo">Book Den</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="/books/search">Search Books</a></li>
+                        <li><a href="/books/checkout">Checkout Book</a></li>
+                        <li><a href="/checkouts">Books Checked Out</a></li>
+                        <li><a href="/books/add">Add Book</a></li>
+                    </ul>
+                </div>
+            </nav>
+            @RenderBody()
+        </div>
+        <!--Import jQuery before materialize.js-->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js"></script>
     </body>
 </html>
